--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "sass": "^1.60.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.3"
   }
