--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
     "sass": "^1.60.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.3"
