--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +20,13 @@
     "xstate": "^4.37.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
+    "jest": "^29.5.0",
     "sass": "^1.60.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "ts-standard": "^12.0.2",
     "typescript": "^5.0.3"
   }
