--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@xstate/react": "^3.2.1",
+    "framer-motion": "^10.12.17",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
